Adding Mail environmental variables - whether to use Auth, what encryption to use and the default sender email. updated Readme

--- a/.env
+++ b/.env
@@ -24,3 +24,6 @@ PHPMAILER_SMTP_HOST=
 PHPMAILER_SMTP_PORT=
 PHPMAILER_SMTP_USERNAME=
 PHPMAILER_SMTP_PASSWORD=
+PHPMAILER_SMTP_DEFAULT_SENDER=sammy@codific.com
+PHPMAILER_SMTP_USE_AUTH=true
+PHPMAILER_SMTP_DEFAULT_ENCRYPTION=ssl
