--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,6 +18,9 @@ parameters :
   phpmailer.smtp.port : '%env(resolve:PHPMAILER_SMTP_PORT)%'
   phpmailer.smtp.username : '%env(resolve:PHPMAILER_SMTP_USERNAME)%'
   phpmailer.smtp.password : '%env(resolve:PHPMAILER_SMTP_PASSWORD)%'
+  phpmailer.smtp.default.sender : '%env(resolve:PHPMAILER_SMTP_DEFAULT_SENDER)%'
+  phpmailer.smtp.use.auth : '%env(resolve:PHPMAILER_SMTP_USE_AUTH)%'
+  phpmailer.smtp.default.encryption : '%env(resolve:PHPMAILER_SMTP_DEFAULT_ENCRYPTION)%'
 
 services :
   # default configuration for services in *this* file
