Added option to enable/disable autotls in php mailer

--- a/.env
+++ b/.env
@@ -27,3 +27,4 @@ PHPMAILER_SMTP_PASSWORD=
 PHPMAILER_SMTP_DEFAULT_SENDER=sammy@codific.com
 PHPMAILER_SMTP_USE_AUTH=true
 PHPMAILER_SMTP_DEFAULT_ENCRYPTION=ssl
+PHPMAILER_SMTP_AUTO_TLS=true
