--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,9 +19,9 @@ parameters :
   phpmailer.smtp.username : '%env(resolve:PHPMAILER_SMTP_USERNAME)%'
   phpmailer.smtp.password : '%env(resolve:PHPMAILER_SMTP_PASSWORD)%'
   phpmailer.smtp.default.sender : '%env(resolve:PHPMAILER_SMTP_DEFAULT_SENDER)%'
-  phpmailer.smtp.use.auth : '%env(resolve:PHPMAILER_SMTP_USE_AUTH)%'
+  phpmailer.smtp.use.auth : '%env(bool:PHPMAILER_SMTP_USE_AUTH)%'
   phpmailer.smtp.default.encryption : '%env(resolve:PHPMAILER_SMTP_DEFAULT_ENCRYPTION)%'
-  phpmailer.smtp.auto.tls : '%env(resolve:PHPMAILER_SMTP_AUTO_TLS)%'
+  phpmailer.smtp.auto.tls : '%env(bool:PHPMAILER_SMTP_AUTO_TLS)%'
 
 services :
   # default configuration for services in *this* file
