--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "ext-zip": "*",
     "composer/package-versions-deprecated": "1.*",
     "doctrine/annotations": "^2.0",
-    "doctrine/doctrine-bundle": "2.*",
-    "doctrine/doctrine-migrations-bundle": "3.*",
-    "doctrine/migrations": "3.*",
+    "doctrine/doctrine-bundle": "2.16.2",
+    "doctrine/doctrine-migrations-bundle": "3.4.2",
+    "doctrine/migrations": "3.9.4",
     "doctrine/orm": "3.5.2",
     "egulias/email-validator": "4.*",
     "endroid/qr-code-bundle": "5.*",
